<resources>
    <string name="app_name">MovieCatalogue</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="tab_text_1">Movies</string>
    <string name="tab_text_2">Tv Shows</string>

    <string name="tab_detail_info">Overview</string>
    <string name="tab_detail_review">Reviews</string>
    <string name="tab_detail_image">Images</string>

    <string name="title_activity_people_detail">PeopleDetailActivity</string>
    <string name="title_activity_search_detail">SearchActivity</string>
    <string name="title_activity_movie_detail">MovieDetailActivity</string>
    <string name="title_activity_tv_detail">TvDetailActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="play_trailer">Play Trailer</string>
    <string name="add_to_favorite">ADD TO FAVORITE</string>
    <string name="remove_from_favorite">REMOVE FROM FAVORITE</string>
    <string name="has_been_added">has been added to favorite list</string>
    <string name="has_been_remove">has been remove from favorite list</string>

    <string name="tab_info">Info</string>
    <string name="tab_review">Review</string>
    <string name="tab_cast">Cast</string>
    <string name="tab_photo">Image</string>
    <string name="synopsis">Synopsis</string>

    <string name="overview">High schoolers Mitsuha and Taki are complete strangers living separate
        lives. But one night, they suddenly switch places. Mitsuha wakes up in Taki\’s body, and he
        in hers. This bizarre occurrence continues to happen randomly, and the two must adjust their
        lives around each other.</string>
    <string name="duration">Duration</string>
    <string name="status">Status</string>
    <string name="tagline">Tagline</string>
    <string name="homepage">Homepage</string>
    <string name="web">https://www.funimationfilms.com/movie/yourname/</string>
    <string name="movies">Movies</string>
    <string name="tv_shows">Tv Shows</string>
    <string name="favorite">Favorite</string>
    <string name="settings">Settings</string>
    <string name="title_activity_favorite">FavoriteActivity</string>


    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="release">Release :</string>
    <string name="duration1">Duration:</string>
    <string name="ratting">Ratting:</string>
    <string name="search">Search</string>
    <string name="deathday">Deathday :</string>
    <string name="homepage2">Homepage :</string>
    <string name="failed">Failed request data to network, please try again</string>
    <string name="are_sure_delete">Are you sure want to delete this ?</string>
    <string name="undo">Undo</string>
    <string name="similar_movies">Similar Movies</string>
    <string name="author">Author:</string>

    <array name="spinner">
        <item>Movies</item>
        <item>Tv Shows</item>
        <item>Peoples</item>
    </array>

    <array name="spinner_movie">
        <item>Popular Movies</item>
        <item>Top Rated Movies</item>
        <item>Upcoming Movies</item>
    </array>

    <array name="spinner_tv">
        <item>Popular Tv Shows</item>
        <item>Top Rated Tv Shows</item>
        <item>On The Air Tv Shows</item>
    </array>
</resources>
