...
                            android:paddingRight="20dp"
                            android:text="@string/play_trailer"
                            android:textColor="@color/colorTextTertiary"
                            tools:ignore="ButtonStyle" />

                        <Button
                            android:id="@+id/btn_watchlist"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="8dp"
                            android:layout_marginEnd="16dp"
                            android:layout_weight="1"
                            android:background="@drawable/rounded_shape_white"
...
